# demo-proxy-app

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
app/: __init__.py  main.py  openapi.json  redirect.json
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  stories.py  users.py
app/core/: __init__.py  config.py
app/crud/: __init__.py  base.py  story.py
app/db/: __init__.py  base_class.py  init_db.py  session.py
app/models/: __init__.py  stories.py
app/schemas/: __init__.py  blocks.py  chapters.py  metrics.py  sections.py  stories.py
data/: sql_app.db
demo/: package-lock.json  package.json
demo/src/: App.js  setupProxy.js
org-app/: main.py
react-demo/: README.md  generate-vercel-json.js  package-lock.json  package.json  vercel.json  vercel.template.json  vite.config.js
react-demo/scripts/: generate-vercel-json.js
react-demo/src/: App.css  App.jsx
vue-demo/: README.md  package-lock.json  package.json  vite.config.ts
vue-demo/src/: App.vue  style.css
vue-demo/src/components/: Connector.tsx  VueComponent.vue
